Mon Feb  8 15:00:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp:
          Extended test with on_publication_matched. Also implemented test regarding
          thread switch for all unexpected statusses to be received (instead of
          one thread switch test for all statussses).

Mon Feb  8 13:49:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.cpp:
          Add tests for thread switch.

        * connectors/dds4ccm/tests/SLDisabled/Receiver/SL_Disabled_Receiver_exec.h:
        * connectors/dds4ccm/tests/SLDisabled/Receiver/SL_Disabled_Receiver_exec.cpp:
          Code aligning.

Mon Feb  8 13:33:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Fixed incorrect path

Mon Feb  8 13:16:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/ContentFilteredTopic.cpp
        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp
        * connectors/dds4ccm/impl/ndds/DataWriterListener.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantListener_T.cpp
        * connectors/dds4ccm/impl/ndds/InstanceHandleManager_T.cpp
        * connectors/dds4ccm/impl/ndds/Publisher.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp
        * connectors/dds4ccm/impl/ndds/QueryCondition.cpp
        * connectors/dds4ccm/impl/ndds/ReadCondition.cpp
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp