@@ -1,3 +1,13 @@
+Mon Feb  8 15:14:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h:
+          Added explicit global scope
+
+        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl:
+          Added pragma rti typesupport to indicate the name of the typesupport
+          header that will be generated by rtiddsgen. We need to know the
+          name of this file when generating the dds4ccm connectors by tao_idl
+
 Mon Feb  8 15:00:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.h:
